Fix alignment on table captions

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,10 @@
 @import 'clubs';
 @import 'foundation-icons';
 
+caption {
+  text-align: left;
+}
+
 .top-bar {
   color: white;
 }
